--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ readme = "README.md"
 keywords = ["ffi", "compression", "zstd", "sys"]
 categories = ["compression", "external-ffi-bindings", "development-tools::ffi"]
 authors = ["Rickard Ernst Björn Lundin <rickard.lundin@x14.se>"]
-exclude = ["zstd-local/", "zstd/", "target/", "*.OLD", "*.bak", ".gitignore"]
+exclude = ["zstd-local/", "zstd/", "target/", "*.OLD", "*.bak", ".gitignore","*.orig","target/","zstd-local/"]
+
+
 homepage = "https://github.com/Ignalina/zstd-sys-rs"
 documentation = "https://docs.rs/zstd-sys"
 
